--- a/.github/workflows/publish-docker-description.yml
+++ b/.github/workflows/publish-docker-description.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   publish_docker_description:
     runs-on: ubuntu-latest
+    environment: main_and_tags
     steps:
       - name: Checkout
         uses: actions/checkout@v4
