--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -205,6 +205,7 @@ jobs:
           chmod +x ./artifacts/polkadot-staking-miner
 
       - name: Log in to Docker Hub
+        if: ${{ github.ref == 'refs/heads/main' ||  github.ref_type == 'tag' }}
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
