--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,4 +1,4 @@
-name: Daily compatibility check against latest polkadot
+name: Nightly test
 
 on:
   schedule:
@@ -8,21 +8,14 @@ on:
 jobs:
   nightly-test:
     runs-on: ubuntu-latest
+    # container: paritytech/ci-unified:bullseye-1.74.0
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Free space on the runner
-        run: |
-          df -h
-          sudo apt -y autoremove --purge
-          sudo apt -y autoclean
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /opt/ghc
-          sudo rm -rf "/usr/local/share/boost"
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-          df -h
+      - name: Get Polkadot and Staking Miner Playground binaries
+        uses: ./.github/workflows/actions/prepare-binaries
 
       - name: Cache Rust dependencies
         uses: swatinem/rust-cache@v2
@@ -32,26 +25,8 @@ jobs:
 
       - name: Run nightly tests
         run: |
-          sudo apt install -y protobuf-compiler
-          rustup target add wasm32-unknown-unknown
-          rustup component add rust-src
-          git clone -b master --depth 1 https://github.com/paritytech/polkadot-sdk.git polkadot-sdk
-          cd polkadot-sdk
-          cargo build -p polkadot --release --features fast-runtime
-          mkdir -p ~/.local/bin
-          sudo mv ./target/release/polkadot /usr/bin
-          sudo mv ./target/release/polkadot-execute-worker /usr/bin
-          sudo mv ./target/release/polkadot-prepare-worker /usr/bin
-          polkadot --version
-          cd -
-          rm -rf polkadot
-          cd staking-miner-playground
-          cargo build --release --features test-trimming
-          sudo mv ./target/release/staking-miner-playground /usr/bin
-          staking-miner-playground --version
-          cd -
           RUST_LOG=info cargo test --workspace --all-features -- --nocapture
-          cargo clean
+          # cargo clean
 
       - name: Create an issue on failure
         if: failure()
@@ -68,3 +43,4 @@ jobs:
           # Look for new *open* issues in this search (we want to
           # create a new one if we only find closed versions):
           search_existing: open
+
