--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,7 +141,7 @@ jobs:
       - name: Run tests on Ubuntu
         run: |
           ${{ env.RUST_INFO }}
-          RUST_LOG=info cargo +stable test --release --workspace -- --nocapture
+          RUST_LOG=info cargo +stable test --workspace -- --nocapture
 
   build:
     name: Build polkadot-staking-miner binary
