--- a/staking-miner-playground/node/Cargo.toml
+++ b/staking-miner-playground/node/Cargo.toml
@@ -22,42 +22,42 @@ futures = "0.3"
 serde_json = "1"
 
 # polkadot-sdk
-frame-system = { git = "https://github.com/paritytech/polkadot-sdk" }
-pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk" }
-pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-cli = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-executor = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-network = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-service = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-core = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk" }
+frame-system = "27"
+pallet-staking = "27"
+pallet-transaction-payment = "27"
+sc-cli = "0.35"
+sc-client-api = "27"
+sc-consensus = "0.32"
+sc-consensus-aura = "0.33"
+sc-consensus-grandpa = "0.18"
+sc-executor = "0.31"
+sc-network = "0.33"
+sc-service = "0.34"
+sc-telemetry = "14"
+sc-transaction-pool = "27"
+sc-transaction-pool-api = "27"
+sc-offchain = "28"
+sp-consensus-aura = "0.31"
+sp-consensus-grandpa = "12"
+sp-core = "27"
+sp-inherents = "25"
+sp-keyring = "30"
+sp-runtime = "30"
+sp-timestamp = "25"
 
 # These dependencies are used for the node template's RPCs
 jsonrpsee = { version = "0.16.2", features = ["server"] }
-sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk" }
-sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-api = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk" }
-sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk" }
-substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk" }
-pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk" }
+sc-basic-authorship = "0.33"
+sc-rpc-api = "0.32"
+sp-api = "25"
+sp-blockchain = "27"
+sp-block-builder = "25"
+substrate-frame-rpc-system = "27"
+pallet-transaction-payment-rpc = "29"
 
 # These dependencies are used for runtime benchmarking
-frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk" }
-frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk" }
+frame-benchmarking = "27"
+frame-benchmarking-cli = "31"
 
 # Local Dependencies
 runtime = { version = "4.0.0-dev", path = "../runtime" }
@@ -65,7 +65,7 @@ lazy_static = "1.4.0"
 rand = "0.8.5"
 
 # CLI-specific dependencies
-try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk", optional = true }
+try-runtime-cli = { version = "0.37", optional = true }
 
 [build-dependencies]
 substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk" }
